<resources>
    <string name="app_name">Desafio2DHA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="descri_o_do_restaurante">Descrição do Restaurante</string>
    <string name="foto_do_prato">Foto do prato</string>
    <string name="back">back</string>
    <string name="foto_do_restaurante">Foto do restaurante</string>
    <string name="pratos_principais">Pratos Principais</string>
</resources>