<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestauranteFragment"
    >

    <ImageView
        android:id="@+id/imgFotoRestaurante"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/foto_do_restaurante"
        android:scaleType="centerCrop"
        android:src="@drawable/tony"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBackRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTrans"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_arrow_back_24"
         />

    <TextView
        android:id="@+id/txtNomeRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgFotoRestaurante"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tony_roma_s"
        android:textColor="@android:color/white"
        android:textFontWeight="900"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/txtPratosPrincipais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgFotoRestaurante"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/pratos_principais"
        android:textColor="@color/colorTextDark"
        android:textFontWeight="900"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFotoRestaurante" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lista_pratos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPratosPrincipais"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPratosPrincipais"
        app:layout_constraintVertical_bias="0.0" />


</RelativeLayout>


